<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#14304A"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/what_s_your_email"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:text="@string/email_address"
        android:textColor="#C4C4C4"
        android:textSize="22sp" />
    
    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:textColor="#14304A"
        android:padding="12dp"
        android:button="@drawable/custom_check"
        android:layout_marginStart="32dp"
        />


    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_of_3"
            android:textColor="#14304A"
            />
        <ProgressBar
            android:layout_marginHorizontal="32dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:progress="67"
            android:progressTint="@color/green"
            />

    </LinearLayout>

    <Button
        android:id="@+id/signBtn"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_signing_up_you_agree_to_our_terms_of_service_and_privacy_policy"
         android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        />


</LinearLayout>