<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#14304A"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/verify_otp"
        android:textColor="#14304A"
        android:textSize="28sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_code_we_sent_you_to_email"
        android:layout_gravity="center_horizontal"
        android:textColor="#C4C4C4"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        />






    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_otp"
            android:textSize="12sp"
            android:textColor="#C4C4C4"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textSize="12sp"
            android:textColor="#41C485"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/rectangle"
                />
            <ImageView
                android:layout_marginStart="16dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/rectangle"
                />
            <ImageView
                android:layout_marginStart="16dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/rectangle"
                />
            <ImageView
                android:layout_marginStart="16dp"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/rectangle"
                />

        </LinearLayout>

        <TextView
            android:layout_marginTop="32dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_of_3"
            android:textColor="#14304A"
            />
        <ProgressBar
            android:layout_marginHorizontal="32dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:progress="100"
            android:progressTint="@color/green"
            />

    </LinearLayout>

    <Button
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:text="@string/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        />

</LinearLayout>