<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="#14304A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hi_welcome"
                android:textColor="#C4C4C4"
                android:textSize="22sp" />


            <TextView
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:text="@string/email_address"
                android:textColor="#14304A"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="12dp"
                android:hint="Enter Your Email"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="16dp"
                android:text="Password"
                android:textColor="#14304A"
                android:textSize="12sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="12dp"
                android:drawableEnd="@drawable/ic_eye"
                android:hint="Enter Your Password"
                android:textSize="20sp" />


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#41C485"
                android:paddingStart="37dp"
                android:paddingEnd="32dp"
                android:text="Log In"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="Forgotten your password ?"
                android:textColor="#14304A"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="37dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=" Or sign in with  "
                    android:textColor="#C4C4C4"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#000000" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/circle">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/apple" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/circle">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/google" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/circle">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:src="@drawable/facebook" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="Don’t have an account ?"
                android:textColor="#C4C4C4"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Create an Account"
                android:textColor="#41C485"
                android:textSize="12sp" />

        </LinearLayout>


    </ScrollView>


</FrameLayout>